[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/TestRoom.gd" type="Script" id=1]
[ext_resource path="res://scenes/TextBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/DigitalDisco-Thin.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="TestRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 4.0
margin_right = 1876.0
margin_bottom = 524.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 524.851
margin_top = 763.419
margin_right = 1331.85
margin_bottom = 1019.42
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )

[node name="FileDialog" type="FileDialog" parent="Control/Popup"]
visible = true
margin_left = 456.0
margin_top = 256.0
margin_right = 1321.0
margin_bottom = 568.0
window_title = "Open a File"
resizable = true
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" parent="Control" instance=ExtResource( 2 )]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="Control/Popup/FileDialog" to="." method="_on_FileDialog_file_selected"]
